sort.baseball.InsertBaseball.scala.error
Compilation error:
InsertBaseball:28: error: not found: value nbBase
  deplace(b%nbBase,p)
            ^InsertBaseball:32: error: not found: value getNombresBases
  var nbBases=getNombresBases()
              ^