sort.baseball.InsertBaseball.scala.code
override def run() {
  var nbBases = getNombreBases()
}

//Nouvelles fonction
//base=index/2
//pos=index%2
//index=base*2+pos

def trouveTrou():Int ={
  var b= getTrouBase()
  var p = getTrouPosition()
  return b*2 + p
}



def couleurJoueur(index:Int) : Int={
 	var b= index/2
 	var p= index%2
  return getCouleurJoueur(b,p)
}

def deplace(index:Int) : Int={
  var nbBases = getNombreBases()
  var b= index/2
  var p =index%2
  deplace(b%nbBase,p)
}

def initialiser(){
  var nbBases=getNombresBases()
  while (trouveTrou()!=1){
    deplace(trouveTrou()+1)
  }
}